--- a/index.html
+++ b/index.html
@@ -1,32 +1,53 @@
 <!DOCTYPE html>
+
 <html>
 
 <head>
+
 	<meta charset="utf-8">
-	<title>My test page</title>
+
+	<title>
+    My test page
+  </title>
+
 </head>
 
 <body>
-	<h1>Welcome</h1>
-	<a href="https://www.mozilla.org/">Mozilla</a>
+	<h1>
+    Welcome
+  </h1>
+	
+  <a href="https://www.mozilla.org/">	<img src="https://tse1.mm.bing.net/th?id=OIP.gAz9H_7Dwg2l52Xscxfd9AHaHa&w=204&h=204&c=8&rs=1&qlt=90&pid=3.1&rm=2" alt="The Firefox logo: a flaming fox surrounding the Earth."></a>
 
-	<img src="https://tse1.mm.bing.net/th?id=OIP.gAz9H_7Dwg2l52Xscxfd9AHaHa&w=204&h=204&c=8&rs=1&qlt=90&pid=3.1&rm=2" alt="The Firefox logo: a flaming fox surrounding the Earth.">
 
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-		magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-		pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-		laborum.</p>
 
-	<p>Lorem ipsum is used to:</p>
+	<p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est	laborum.
+  </p>
+
+	<p>
+    Lorem ipsum is used to:
+  </p>
 
 	<ol>
-		<li>Be a placeholder</li>
-		<li>Not distract from the page</li>
-		<li>Look like a real paragraph</li>
+
+		<li>
+      Be a placeholder
+    </li>
+
+		<li>
+      Not distract from the page
+    </li>
+
+		<li>
+      Look like a real paragraph
+    </li>
+
 	</ol>
 
-	<p>so the layout is the only thing focused on.</p>
+	<p>
+    so the layout is the only thing focused on.
+  </p>
 
 </body>
 
