--- a/index.html
+++ b/index.html
@@ -1,60 +1,58 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
-
-	<meta charset="utf-8">
-
-	<title>
-		My test page
-	</title>
-
+	<title>Style Tutorial</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-  
-	<h1>
-		Welcome
-	</h1>
-
-	<a href="https://www.mozilla.org/">
-		<img src="https://tse1.mm.bing.net/th?id=OIP.gAz9H_7Dwg2l52Xscxfd9AHaHa&w=204&h=204&c=8&rs=1&qlt=90&pid=3.1&rm=2" alt="The Firefox logo: a flaming fox surrounding the Earth."></a>
-
-
-
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-			dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-			ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-			nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-			anim id est laborum.
-		</p>
-
-		<p>
-			Lorem ipsum is used to:
-		</p>
-
-		<ol>
-
-			<li>
-				Be a placeholder
-			</li>
-
-			<li>
-				Not distract from the page
-			</li>
-
-			<li>
-				Look like a real paragraph
-			</li>
-
-		</ol>
-
-		<p>
-			so the layout is the only thing focused on.
-		</p>
-
+	<header>
+		<img src="https://avatarfiles.alphacoders.com/144/144986.jpg" class="profile-img">
+		<nav>
+			<ul>
+				<li><a href="#hero">Home</a></li>
+				<li><a href="#about">About</a></li>
+				<li><a href="#contact">Contact</a></li>
+			</ul>
+		</nav>
+	</header>
+	<main>
+		<section id="hero">
+			<div class="section-inner">
+				<img src="https://avatarfiles.alphacoders.com/144/144986.jpg" class="profile-img">
+				<h1>Hi, I'm a cool Hacker Cat.</h1>
+			</div>
+		</section>
+		<section id="about">
+			<div class="section-inner">
+				<h2>About Me</h2>
+				<p>I'm a really cool cat. Every day I wake up, I hack the credit card companies and erase the debt of
+					one random person. Then I go to sleep.</p>
+				<h3>Achievements</h3>
+				<ul>
+					<li>Hair-Ball Throw up Champion</li>
+					<li>Knows about Kali Linux</li>
+					<li>Soft AF</li>
+				</ul>
+			</div>
+		</section>
+		<section id="contact">
+			<div class="section-inner">
+				<h2>Contact Me</h2>
+				<p>You can find me on:</p>
+				<ul>
+					<li><a href="https://twitter.com/SocksMcFurry">Twitter</a></li>
+					<li><a href="https://www.reddit.com/r/cat/">Reddit</a></li>
+					<li><a href="https://www.youtube.com/watch?v=R4anpxoHkPI">That God damned table again.</a></li>
+				</ul>
+				<p>Or, you can <a href="https://www.ummno.com/">send me an email!</a></p>
+			</div>
+		</section>
+	</main>
+	<footer>
+		© Copyright YuR mOm!
+	</footer>
 </body>
 
 </html>
